--- a/docs/Projections.ipynb
+++ b/docs/Projections.ipynb
@@ -325,6 +325,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Affine Set\n",
+    "\n",
+    "Projection of $\\mathbf{y}, \\, \\mathbf{y} \\in \\mathbb{R}^m$ to the affine set $S = \\{\\mathbf{x}:\\mathbf{A} \\mathbf{x} = \\mathbf{b}\\}$, where $\\mathbf{A} \\in \\mathbf{R}^{m \\times n}$ and $\\mathbf{b} \\in \\mathbb{R}^m$.\n",
+    "\n",
+    "Then, $\\text{proj}_S(\\mathbf{y})$:\n",
+    "\n",
+    "$$\\text{proj}_S(\\mathbf{y}) = \\mathbf{y} - \\mathbf{A}^+ (\\mathbf{Ay} - \\mathbf{b}) = \\text{proj}_{\\mathcal{N}(\\mathbf{A})}(\\mathbf{y}) + \\mathbf{A}^+\\mathbf{b}\\label{eq1}\\tag{1}$$\n",
+    "\n",
+    "where $\\mathbf{A}^+$ is the Moore-Penrose inverse of $\\mathbf{A}$.\n",
+    "\n",
+    "The set $S$ is characterized by the solutions to $\\mathbf{A}^+ \\mathbf{b} + \\mathbf{v}$, where $\\mathbf{v} \\in \\mathcal{N}(\\mathbf{A})$. For arbitrary $\\mathbf{v} \\in \\mathcal{N}(\\mathbf{A})$,\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "    \\|\\mathbf{y} - (\\mathbf{A}^+ \\mathbf{b} + \\mathbf{v})\\|^2 \n",
+    "    &= \\|\\text{proj}_{\\mathcal{C}(\\mathbf{A}^T)}(\\mathbf{y}) + \\text{proj}_{\\mathcal{N}(\\mathbf{A})}(\\mathbf{y}) - (\\mathbf{A}^+ \\mathbf{b} + \\mathbf{v})\\|^2\\\\\n",
+    "    &= \\|\\text{proj}_{\\mathcal{C}(\\mathbf{A}^T)}(\\mathbf{y})\\|^2 + \\|(\\mathbf{A}^+ \\mathbf{b} + (\\mathbf{v} - \\text{proj}_{\\mathcal{N}(\\mathbf{A})}(\\mathbf{y}))\\|^2\\\\\n",
+    "    &\\ge \\|\\text{proj}_{\\mathcal{N}(\\mathbf{A})} (\\mathbf{y})\\|^2 + \\|\\mathbf{A}^+ \\mathbf{b}\\|\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "since $\\mathbf{A}^+\\mathbf{b}$ is the minimum norm solution. Taking $\\mathbf{v} = \\text{proj}_{\\mathcal{N}(\\mathbf{A})}(\\mathbf{y})$ achieves this minimum, verifying $(\\ref{eq1})$. If $\\mathbf{AA}^+ \\mathbf{b} \\neq \\mathbf{b}$, then $S = \\emptyset$ and expression $(\\ref{eq1})$ can be interpreted as the solution to:\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "  &\\text{minimize } \\|\\mathbf{x} - \\mathbf{y}\\|\\\\\n",
+    "  &\\text{s.t. } \\|\\mathbf{Ax} - \\mathbf{b}\\|_2 = \\min\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "A null basis of $\\mathbf{A}$ and the minimum norm solution $\\mathbf{A}^+ \\mathbf{b}$ can be obtained from the thin SVD, $\\mathbf{U}_r \\boldsymbol{\\Sigma} \\mathbf{V}_r^T$ of $\\mathbf{A}$, where $r = \\text{rank}(\\mathbf{A})$. Then,\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "    \\text{proj}_{\\mathcal{N}(\\mathbf{A})}(\\mathbf{y}) = \\mathbf{y} - \\mathbf{V}_r \\mathbf{V}_r^T \\mathbf{y} && \\mathbf{A}^+ \\mathbf{b} = \\mathbf{V}_r \\boldsymbol{\\Sigma}^+ \\mathbf{U}_r^T \\mathbf{b}.\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "Note, the QR decomposition is more efficient for large scale $\\mathbf{A}$.\n",
+    "\n",
+    "Since this only requires the thin SVD, the time complexity is $O(mn^2)$ (assuming $m >> n$)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Random\n",
+    "Random.seed(12345);\n",
+    "A = rand(5, 5)\n",
+    "b = ones(5)\n",
+    "y = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Contributing\n",
     "\n",
     "You are welcome to contribute to the Projections.jl package. To add a projection operator, e.g., projection to the affine set, to the package, follow these steps:\n",
@@ -342,35 +396,31 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.0.3",
+   "display_name": "Julia 1.1.0",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.3"
+   "version": "1.1.0"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "120px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
