--- a/docs/Projections.ipynb
+++ b/docs/Projections.ipynb
@@ -372,7 +372,8 @@
     "Random.seed(12345);\n",
     "A = rand(5, 5)\n",
     "b = ones(5)\n",
-    "y = "
+    "y = rand(5)\n",
+    "project(Affine(A, b), y)"
    ]
   },
   {
